--- a/index.html
+++ b/index.html
@@ -277,17 +277,13 @@
         </div>
       </div>
     </footer>
-    <!--  
-.   
- … 
-          About Us Contact Blog Careers
-    Support Privacy Policy Request Invite © Easybank. All Rights Reserved -->
-    <!-- 
+
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div> -->
+      >. Coded by
+      <a href="https://www.twitter.com/_Annonnymouss_">Anonymous</a>.
+    </div>
   </body>
 </html>
